Body is now injectable in the controller. BETA FormData is injectable as well.
Signed-off-by: Pierre Adam <p.adam@merim-groupe.com>